objects/Meeting_Minutes__c.object
<CustomObject>
    <description>Used to create, track, and record meeting minute entries in Salesforce.</description>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <label>Attachment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments (Internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporation_Doc__c</fullName>
        <inlineHelpText>Doc Req - Corporation</inlineHelpText>
        <label>Corporation Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special Directors Meeting</fullName>
                </value>
                <value>
                    <fullName>Special Shareholders Meeting</fullName>
                </value>
                <value>
                    <fullName>Consent to Action</fullName>
                </value>
                <value>
                    <fullName>Corporate Annual Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Anderson_Services__c</fullName>
        <label>Anderson Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Corporate Concierge</fullName>
                </value>
                <value>
                    <fullName>Corporate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Corporate Assistance Program</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Meeting_Held__c</fullName>
        <label>Date and Time of Meeting Held</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Managers_Partners_Present__c</fullName>
        <label>Directors/Managers/Partners Present</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Requested__c</fullName>
        <label>Document Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Shareholders and Directors Meetings</fullName>
                </value>
                <value>
                    <fullName>Consent to Action (Resolution Only-No Meeting)</fullName>
                </value>
                <value>
                    <fullName>LLC Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>LLC Manager Meeting</fullName>
                </value>
                <value>
                    <fullName>LLC Member Meeting</fullName>
                </value>
                <value>
                    <fullName>LP Partners Meeting</fullName>
                </value>
                <value>
                    <fullName>Special Directors Meeting</fullName>
                </value>
                <value>
                    <fullName>Special Shareholders Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_Requested__c</fullName>
        <label>Documents Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountable Plan</fullName>
                </value>
                <value>
                    <fullName>105 Plan</fullName>
                </value>
                <value>
                    <fullName>280A Agreement</fullName>
                </value>
                <value>
                    <fullName>Waiver of Notice</fullName>
                </value>
                <value>
                    <fullName>Banking Resolution</fullName>
                </value>
                <value>
                    <fullName>Employment Agreement</fullName>
                </value>
                <value>
                    <fullName>Note (Loan to Company)</fullName>
                </value>
                <value>
                    <fullName>Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Goals</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Items_Discussed_Decided_Resolved_at_Meet__c</fullName>
        <label>Items Discussed Decided Resolved at Meet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_Manager_Managed_Doc__c</fullName>
        <inlineHelpText>Document Requested - Manager Managed LLC</inlineHelpText>
        <label>LLC Manager Managed Doc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special Managers Meeting</fullName>
                </value>
                <value>
                    <fullName>LLC Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Consent to Action</fullName>
                </value>
                <value>
                    <fullName>Special Document - Special Members Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_Member_Managed_Doc__c</fullName>
        <inlineHelpText>Document Requested - Member Managed LLC</inlineHelpText>
        <label>LLC Member Managed Doc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special Members Meeting</fullName>
                </value>
                <value>
                    <fullName>LLC Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Consent to Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LP_Doc__c</fullName>
        <inlineHelpText>Document Requested - LP</inlineHelpText>
        <label>LP Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LP Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>LP Special Partners Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Address__c</fullName>
        <label>Meeting  Address</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Entity__c</fullName>
        <label>Name of Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shareholders_Members_Partners_Present__c</fullName>
        <label>Shareholders/Members/Partners Present</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Formation__c</fullName>
        <label>State of Formation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting On Someone Else</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Entity__c</fullName>
        <label>Type of Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Meeting Minutes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Name_of_Entity__c</columns>
        <columns>Entity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Document_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Meeting_Minutes_Completed</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Name_of_Entity__c</columns>
        <columns>Document_Requested__c</columns>
        <columns>Entity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Meeting_Minutes</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Meeting Minutes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Minutes</pluralLabel>
    <recordTypes>
        <fullName>Form_Assembly</fullName>
        <active>true</active>
        <description>For Form Assembly submissions</description>
        <label>Form Assembly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>